Refactor: make companion lifecycle canonical
Remove four process-local command lifecycle caches, shrink live snapshots to presentation data, fail closed on missing projections, and keep relocation timeouts from inventing LOST state. Inject focused direct-live coop collaborators and harden retry validation.\n\nTests: focused persistence/command/coop suite (71 passed); Maven production and test compilation passed.